samples/_failures_safe/1761480819_e86808_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_682fc414.c: In function ‘main’:
./samples/SAFE/__tmp_682fc414.c:162:5: error: expected ‘while’ at end of input
  162 |     }
      |     ^
./samples/SAFE/__tmp_682fc414.c:162:5: error: expected declaration or statement at end of input
